--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,12 @@
             <version>5.3.0</version>
             <!-- <scope>test</scope>-->
         </dependency>
+        <!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-java -->
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-java</artifactId>
+            <version>7.11.2</version>
+        </dependency>
     </dependencies>
 
     <build>
